--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 :root {
-    --background: #50514F; /* Main Primary color */
-    --tableBorder: #F25F5C;
-    --heading: #F25F5C;
-    --buttonText: #F25F5C;
-    --inputBackground: #FFE066;
-    --filledOut: #247BA0;
-    --buttonBackground: #FFE066;
-    --stats: #70C1B3;
-    --inputText: #50514F;
+    --background: #edd9c0;
+    --tableBorder: #7d4627;
+    --heading: #7d4627;
+    --buttonText: #c9d8c5;
+    --buttonBackground: #7d4627;
+    --inputBackground: #fff;
+    --filledOut: green;
+    --stats: #7d4627;
+    --inputText: #7d4627;
 }
 
 hr {
